# hyperbolic_learning_library

./: .gitignore  model.gv  pyproject.toml
benchmark/: bench_fc_kernel.py  hlinear.py  hmlp.py  profile_mlp.py  profile_resnet.py  profiling.py  resnet.py  utils.py
benchmark/models/: hresnet.py  mlp.py  resnet.py
docs/tex/: derivatives.tex
hypll/kernels/: __init__.py  expmap0_bwd_kernel.py  expmap0_fwd_kernel.py  expmap0_layer.py  fc_bwd_kernel.py  fc_fwd_kernel.py  fc_kernel.py  fc_layer.py  gemm.py  logmap0_bwd_kernel.py  logmap0_fwd_kernel.py  logmap0_layer.py  tangent_space_op_layer.py  utils.py
hypll/kernels/expmap/: expmap0_bwd_kernel.py  expmap0_fwd_kernel.py  expmap0_layer.py
hypll/kernels/fc/: fc_bwd_kernel.py  fc_fwd_kernel.py  fc_layer.py
hypll/kernels/logmap/: logmap0_bwd_kernel.py  logmap0_fwd_kernel.py  logmap0_layer.py
hypll/kernels/tangent_space_ops/: tangent_space_op_fwd_kernel.py  tangent_space_op_layer.py
hypll/manifolds/poincare_ball/: curvature.py  manifold.py
hypll/nn/: __init__.py
hypll/nn/modules/: activation.py  convolution.py  pooling.py
hypll/utils/: memory.py
tests/kernels/: test_addmm.py  test_expmap0_kernel.py  test_fc_kernel.py  test_logmap0_kernel.py  test_op_in_tangent_space.py  test_utils.py  utils.py
