[tool.poetry]
name = "hypll"
version = "0.1.2"
description = "A framework for hyperbolic learning in PyTorch"
authors = ["Max van Spengler", "Philipp Wirth", "Pascal Mettes"]

[tool.poetry.dependencies]
python = "^3.10"
Torch = "2.7.0"
torchvision = { version = "0.22.0" }
matplotlib = { version = "^3.8.4" }

# Optional dependencies for building the docs.
# Install with poetry install --extras "docs"
sphinx-copybutton = { version = "^0.5.2", optional = true }
sphinx = { version = "^7.2.6", optional = true }
sphinx-gallery = { version = "^0.15.0", optional = true }
sphinx-tabs = { version = "^3.4.5", optional = true }
networkx = { version = "^3.2.1", optional = true }
graphviz = "^0.20.3"
torchview = "^0.2.7"
tqdm = "^4.67.1"

[tool.poetry.dev-dependencies]
black = "*"
isort = "*"
pytest = "*"
pytest-mock = "*"

[tool.poetry.extras]
docs = [
	"sphinx-copybutton",
	"sphinx",
	"sphinx-gallery",
	"sphinx-tabs",
	"torchvision",
	"matplotlib",
	"networkx",
  "timm",
  "fastai",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
